# visual-sorting

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  CMakeLists.txt  LICENSE  README.md  sortingchart.cpp  sortingchart.h  vcpkg.json  widget.cpp  widget.h  widget.ui
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp
cmake/: Cache.cmake  CompilerWarnings.cmake  Doxygen.cmake  PreventInSourceBuilds.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Vcpkg.cmake  version.h.in
include/sorting/: sorting.h  version.h
src/: CMakeLists.txt  sorting.cpp
test/: CMakeLists.txt  tests.cpp
